Prakash/mckin 9422 fixes (#67)
* when you post for the 1st time, Add a response heading doesn't appear but after that for 2nd, 3rd and so on it starts appearing
Icon UI of answered post is disturbed
UI is disturbed when you mark a response/comment an answer
There is an extra whitespace at the bottom of the page.

* Top bars are not left aligned in discussion page while in all the other pages these are left aligned - Extra padding is added at both sides (Left and right) of the page, which is different from other pages.

--- a/lms/static/sass/xblocks/common/_buttons.scss
+++ b/lms/static/sass/xblocks/common/_buttons.scss
@@ -13,6 +13,7 @@
 
     //Secondary button .btn-primary
     &.btn-primary {
+      color: $white;
       background-color: var(--primary);
       border-color: var(--primary);
     }
